增加忽略规则

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 ./**/.DS_Store
 ./**/node_modules/
 ./**/package-lock.json
+./aa.text
+about-js/**/node_modules/
+canvas/**/node_modules/
+about-xss/**/node_modules/
