--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ./**/.DS_Store
 ./**/node_modules/
 ./**/package-lock.json
-./aa.text
+aa.json
 about-js/**/node_modules/
 canvas/**/node_modules/
 about-xss/**/node_modules/
