--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "node-static": "^0.7.11",
+    "ws": "^7.3.1"
+  }
 }
